[project]
name = "ttydm"
version = "0.0.0"
description = "A dismplay manager for pure tty setups"
authors = [
    {name = "eden",email = "eden@allthingslinux.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "textual (>=3.4.0,<4.0.0)",
    "simplepam (>=0.1.5,<0.2.0)"
]

[tool.poetry.scripts]
ttydm = "ttydm.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
